--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 pyflakes==3.1.0
 pytest==7.4.2
+pytest-env==1.0.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
