--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asyncpg==0.28.0
 black==23.9.1
 certifi==2023.7.22
 click==8.1.7
+coverage==7.3.1
 databases==0.8.0
 exceptiongroup==1.1.3
 fastapi==0.103.1
@@ -31,6 +32,7 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 pyflakes==3.1.0
 pytest==7.4.2
+pytest-cov==4.1.0
 pytest-env==1.0.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
